alert item align fix

--- a/front/src/app/components/common/alert/index.less
+++ b/front/src/app/components/common/alert/index.less
@@ -58,5 +58,6 @@
 
     &__hash {
         margin: 0 10px;
+        width: 150px;
     }
 }
